@@ -1,4 +1,6 @@
 Changes for 1.3.1.0
+* Allowed rockets to also damage a unit, rather than a territory.  Further work on getting unit damage to work and display properly. (veqryn)
+
 * Made disabled units actually work. (veqryn)
 
 * Fixed bugs introduced into Strategic Bombing. (veqryn)
